quickfix: further accessibility contrast fixes

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 	/* Colors */
 	--color-gecko-black: #121218;
 	--color-gecko-shade: #1f1f24;
-	--color-gecko-muted: #2b2b30;
+	--color-gecko-muted: #595969;
 	--color-gecko-black-hover: #1f1f24;
 	--color-gecko-white: #f3f3f3;
 	--color-gecko-gray: #b4b4b6;
